# pinetext

./: .env.example  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  prod.yml  pypi.yml  test.yml
src/pinetext/: cli.py  client.py  settings.py  telemetry.py
tests/: cli_test.py  client_test.py  conftest.py  telemetry_test.py
