[project]
name = "pinetext"
version = "0.3.2"
description = "PineText"
readme = "README.md"
liecense = "MIT"
requires-python = ">=3.13"
dependencies = [
    "pinecone>=8.0.0",
    "pydantic-settings>=2.12.0",
    "typer>=0.21.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
pinetext = "pinetext.cli:app"

[project.optional-dependencies]
observability = [
    "opentelemetry-proto>=1.39.1",
    "wandb>=0.25.0",
    "weave>=0.52.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
    "ty>=0.0.29",
]
